--- a/release/ticket/html/s/config.ini
+++ b/release/ticket/html/s/config.ini
@@ -1,2 +1,10 @@
-[query]
-domain=10.211.55.5
+[db]
+db_host=127.0.0.1
+db_port=3306
+db_user=root
+db_passwd=datacenter123
+db_dbname=ticket_lua
+
+[ticketsrv]
+ticket_host=
+ticket_port=9091
